# web-vite-react-fastapi-postgres-shadcn

./: .gitignore  README.md  docker-compose.yml  implementation_plan.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260316_01_create_products_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py
backend/app/models/: product.py
backend/app/repositories/: product_repository.py
backend/app/schemas/: product.py
backend/app/services/: product_service.py
backend/app/static/assets/: index-QVQZ8rHY.js
backend/tests/: conftest.py  test_products.py
docs/: architecture.md  deployment.md  development.md
docs/decisions/: 001-architecture.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: providers.tsx  router.tsx  theme-config.ts  theme-provider.tsx
frontend/src/components/layout/: app-layout.tsx
frontend/src/components/theme/: theme-controls.tsx
frontend/src/lib/: api-client.ts  env.ts  utils.ts
frontend/src/pages/: not-found.tsx
frontend/src/styles/: globals.css
public/: index.html
public/assets/: index-CS9RNCwu.css
scripts/: migrate-backend.mjs  run-backend.mjs  setup.mjs  stop-local-processes.mjs  test-backend.mjs
(+23 files in other folders)
