[project]
name = "web-vite-react-fastapi-postgres"
version = "0.1.0"
description = "Root Python metadata for Vercel deployment."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.16.5",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.35.0",
]
